@@ -8,6 +8,7 @@ Bug Fixes
 3. Vertical alignment of rich texts fixed
 4. Workaround for a Qt4 bug added, that produces horrible performance
    when painting curves with a pen width > 1.
+5. Background for the tracker text of QwtPickers fixed.
 
 Changes
 -------
